made the wavelet transform and inverse

--- a/jpg_compress.ipynb
+++ b/jpg_compress.ipynb
@@ -222,13 +222,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 140,
    "metadata": {},
    "outputs": [
@@ -267,74 +260,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# JPEG 2000 stuff"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Computing the DWT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.354  0.354  0.354  0.354  0.354  0.354  0.354  0.354]\n",
-      " [ 0.354  0.354  0.354  0.354 -0.354 -0.354 -0.354 -0.354]\n",
-      " [ 0.5    0.5   -0.5   -0.5    0.     0.     0.     0.   ]\n",
-      " [ 0.     0.     0.     0.     0.5    0.5   -0.5   -0.5  ]\n",
-      " [ 0.707 -0.707  0.     0.     0.     0.     0.     0.   ]\n",
-      " [ 0.     0.     0.707 -0.707  0.     0.     0.     0.   ]\n",
-      " [ 0.     0.     0.     0.     0.707 -0.707  0.     0.   ]\n",
-      " [ 0.     0.     0.     0.     0.     0.     0.707 -0.707]]\n",
-      "[ 1.414  6.364 15.5   -6.5   21.92   0.     0.    -9.192]\n",
+      "[[ 1  1  1  0  1  0  0  0]\n",
+      " [ 1  1  1  0 -1  0  0  0]\n",
+      " [ 1  1 -1  0  0  1  0  0]\n",
+      " [ 1  1 -1  0  0 -1  0  0]\n",
+      " [ 1 -1  0  1  0  0  1  0]\n",
+      " [ 1 -1  0  1  0  0 -1  0]\n",
+      " [ 1 -1  0 -1  0  0  0  1]\n",
+      " [ 1 -1  0 -1  0  0  0 -1]]\n",
+      "[0.086 0.164 0.164 0.242 0.164 0.242 0.344 0.219]\n",
       "(array([14.849, -7.071, -7.071,  2.121]), array([21.92 ,  0.   ,  0.   , -9.192]))\n"
      ]
     }
    ],
    "source": [
-    "def discrete_haar_wavelet_transform(row):\n",
-    "    # This function assumes that len(row)=2^n, n>1\n",
-    "    output = [0]*len(row)\n",
-    "\n",
-    "    length = len(row) // 2\n",
-    "    while True:\n",
-    "        for i in range(length):\n",
-    "            total = row[i * 2] + row[i * 2 + 1] * 1/2\n",
-    "            difference = row[i * 2] - row[i * 2 + 1] * 1/2\n",
-    "            output[i] = total\n",
-    "            output[length + i] = difference\n",
-    "\n",
-    "        if length == 1:\n",
-    "            return output\n",
-    "\n",
-    "        # Swap arrays to do next iteration\n",
-    "        row[:length] = output[:length]\n",
-    "        length = length // 2\n",
-    "\n",
-    "def two_dimensional_haar_wavelet_transform(data):\n",
-    "    # Apply 1D DWT to each row\n",
-    "    transformed_rows = [discrete_haar_wavelet_transform(row) for row in data]\n",
-    "\n",
-    "    # Transpose the result to prepare for column-wise operation\n",
-    "    transposed_rows = list(map(list, zip(*transformed_rows)))\n",
-    "\n",
-    "    # Apply 1D DWT to each \"column\" (which are now rows after transposition)\n",
-    "    transformed_columns = [discrete_haar_wavelet_transform(row) for row in transposed_rows]\n",
-    "\n",
-    "    # Transpose the result back to original orientation\n",
-    "    result = list(map(list, zip(*transformed_columns)))\n",
-    "\n",
-    "    # The result now contains LL, LH, HL, HH components\n",
-    "\n",
-    "    # LL is the top-left quarter of the result\n",
-    "    # LH is the top-right quarter\n",
-    "    # HL is the bottom-left quarter\n",
-    "    # HH is the bottom-right quarter\n",
-    "\n",
-    "    return result\n",
-    "\n",
-    "\n",
     "H = np.array([\n",
     "    [1, 1, 1, 1, 1, 1, 1, 1],\n",
     "    [1, 1, 1, 1, -1, -1, -1, -1],\n",
@@ -344,17 +302,21 @@
     "    [0, 0, 1, -1, 0, 0, 0, 0],\n",
     "    [0, 0, 0, 0, 1, -1, 0, 0],\n",
     "    [0, 0, 0, 0, 0, 0, 1, -1]\n",
-    "])\n",
+    "]).T\n",
+    "\n",
     "\n",
     "# H = np.array([])\n",
     "\n",
     "# Normalize the matrix\n",
-    "row_norms = np.linalg.norm(H, axis=1, keepdims=True)\n",
+    "norm = np.linalg.det(H)\n",
+    "# print(row_norms)\n",
+    "col_norms = np.linalg.norm(H, axis=0, keepdims=True)\n",
+    "# print(col_norms)\n",
     "np.set_printoptions(precision=3, suppress=True)\n",
+    "print(H)\n",
+    "normalized_H = H / norm\n",
     "\n",
-    "normalized_H = H / row_norms\n",
-    "\n",
-    "print(normalized_H)\n",
+    "# print(normalized_H)\n",
     "row = data[0]\n",
     "bruh = normalized_H @ np.array(row)\n",
     "print(bruh)\n",
@@ -362,7 +324,6 @@
     "# print(row)\n",
     "# print(discrete_haar_wavelet_transform(row.copy()))\n",
     "# print(row)\n",
-    "print(pywt.dwt(row, 'haar'))\n",
     "# print(row)\n",
     "\n",
     "# approximation = np.array(two_dimensional_haar_wavelet_transform(y / 255))\n",
@@ -371,6 +332,40 @@
     "# plt.show()\n",
     "# plt.imshow(y)\n",
     "# plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.707  0.707  0.     0.     0.     0.     0.     0.   ]\n",
+      " [ 0.707 -0.707  0.     0.     0.     0.     0.     0.   ]\n",
+      " [ 0.     0.     0.707  0.707  0.     0.     0.     0.   ]\n",
+      " [ 0.     0.     0.707 -0.707  0.     0.     0.     0.   ]\n",
+      " [ 0.     0.     0.     0.     0.707  0.707  0.     0.   ]\n",
+      " [ 0.     0.     0.     0.     0.707 -0.707  0.     0.   ]\n",
+      " [ 0.     0.     0.     0.     0.     0.     0.707  0.707]\n",
+      " [ 0.     0.     0.     0.     0.     0.     0.707 -0.707]]\n",
+      "[14.849 21.92  -7.071  0.    -7.071  0.     2.121 -9.192]\n",
+      "(array([14.849, -7.071, -7.071,  2.121]), array([21.92 ,  0.   ,  0.   , -9.192]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "H = [[.5, .5, 0, 0, 0, 0, 0, 0], [.5, -.5, 0, 0, 0, 0, 0, 0], [0, 0, .5, .5, 0, 0, 0, 0], [0, 0, .5, -.5, 0, 0, 0, 0], [0, 0, 0, 0, .5, .5, 0, 0], [0, 0, 0, 0, .5, -.5, 0, 0], [0, 0, 0, 0, 0, 0, .5, .5], [0, 0, 0, 0, 0, 0, .5, -.5]]\n",
+    "H = np.reshape(H, (8, 8))\n",
+    "norm_factor = np.linalg.norm(H, axis=1)\n",
+    "H = H / norm_factor\n",
+    "print(H)\n",
+    "\n",
+    "\n",
+    "print(H @ row)\n",
+    "print(pywt.dwt(row, 'haar'))"
    ]
   },
   {
@@ -417,7 +412,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gen_harr_matrix(N: int):\n",
+    "    if N <= 1 or  (N & (N - 1)) != 0:\n",
+    "        print(\"N is not a multiple of 2 zodie\")\n",
+    "        return\n",
+    "    \n",
+    "    harr = np.zeros((N, N))\n",
+    "    for i in range(0, N, 2):\n",
+    "        harr[i, i:i+2] = [1, 1]\n",
+    "        harr[i+1, i:i+2] = [1, -1]\n",
+    "\n",
+    "    # normalizing the harr matrix so it's consistent with pwt\n",
+    "    return harr / np.linalg.norm(harr, axis=1)\n",
+    "\n",
+    "def gen_harr_inverse(N: int):\n",
+    "    return np.linalg.inv(gen_harr_matrix(N))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 95.5  70.5  88.5 ...  63.   91.5  45. ]\n",
+      " [ 28.5  41.5 -13.5 ...  40.    3.5 -13. ]\n",
+      " [ 92.   69.5  33.  ... 100.5  98.5 130. ]\n",
+      " ...\n",
+      " [ -1.    6.5 -34.  ...  32.   55.  -10.5]\n",
+      " [ 93.5  55.5  61.5 ... 128.   60.   75. ]\n",
+      " [ -2.5  20.5  23.5 ... -33.  -17.  -16. ]]\n",
+      "(256, 256)\n",
+      "[[ 95.5  70.5  88.5 ...  63.   91.5  45. ]\n",
+      " [ 28.5  41.5 -13.5 ...  40.    3.5 -13. ]\n",
+      " [ 92.   69.5  33.  ... 100.5  98.5 130. ]\n",
+      " ...\n",
+      " [ -1.    6.5 -34.  ...  32.   55.  -10.5]\n",
+      " [ 93.5  55.5  61.5 ... 128.   60.   75. ]\n",
+      " [ -2.5  20.5  23.5 ... -33.  -17.  -16. ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "zodie = np.random.randint(0, 100, size=(512, 512)) # np.array([[1,3, 1, 52], [1,3, 133, 2], [9,56, 32, 1], [1,30, 10, 57]])\n",
+    "\n",
+    "\n",
+    "def get_2d_wavelet_transform(data):\n",
+    "    H = gen_harr_matrix(len(data))\n",
+    "\n",
+    "    row_stuff = H @ data\n",
+    "\n",
+    "    # permute the rowwws\n",
+    "\n",
+    "    cA_row, cD_row = row_stuff[::2, :], row_stuff[1::2, :]\n",
+    "    # print(cA, '\\n\\n',cD)\n",
+    "    col_stuff = H @ cA_row.T\n",
+    "\n",
+    "    cA, cV = col_stuff[::2, :].T, col_stuff[1::2, :].T\n",
+    "    col_stuff2 = H @ cD_row.T\n",
+    "\n",
+    "\n",
+    "    cH, cD = col_stuff2[::2, :].T, col_stuff2[1::2, :].T\n",
+    "\n",
+    "\n",
+    "    cA_pywt, (cH_pywt, cV_pywt, cD_pywt) = pywt.dwt2(zodie, 'haar')\n",
+    "    # print(cA)\n",
+    "    # print(cV)\n",
+    "\n",
+    "    # print(cH)\n",
+    "    # print(cD)\n",
+    "    assert len(np.flatnonzero(~np.isclose(cA, cA_pywt))) == 0\n",
+    "    assert len(np.flatnonzero(~np.isclose(cH, cH_pywt))) == 0\n",
+    "    assert len(np.flatnonzero(~np.isclose(cV, cV_pywt))) == 0\n",
+    "    assert len(np.flatnonzero(~np.isclose(cD, cD_pywt))) == 0\n",
+    "    # assert len(np.flatnonzero(cV - cV_pywt)) == 0\n",
+    "    # assert len(np.flatnonzero(cD - cD_pywt)) == 0\n",
+    "    # assert len(np.flatnonzero(cH - cH_pywt)) == 0\n",
+    "\n",
+    "    return cA, (cH, cV, cD)\n",
+    "\n",
+    "cA, (cH, cV, cD) = get_2d_wavelet_transform(zodie)\n",
+    "\n",
+    "def get_inv_wavelet_transform(cA, cH, CV, cD):\n",
+    "    h_inv = gen_harr_inverse(len(cA) * 2)\n",
+    "    print(cH.shape)\n",
+    "    col_stuff2 = np.zeros_like(np.vstack([cH, cH]))\n",
+    "    col_stuff2[::2, :] = cH.T\n",
+    "    col_stuff2[1::2, :] = cD.T\n",
+    "\n",
+    "    cD_row = (h_inv @ col_stuff2).T\n",
+    "\n",
+    "\n",
+    "    col_stuff = np.zeros((cH.shape[0]*2, cH.shape[1]))\n",
+    "    col_stuff[::2, :] = cA.T\n",
+    "    col_stuff[1::2, :] = cV.T\n",
+    "\n",
+    "    cA_row = (h_inv @ col_stuff).T\n",
+    "\n",
+    "    row_stuff = np.zeros_like(np.vstack([cA_row, cA_row]))\n",
+    "    row_stuff[::2, :] = cA_row\n",
+    "    row_stuff[1::2, :] = cD_row\n",
+    "    \n",
+    "    data = h_inv @ row_stuff\n",
+    "    return data\n",
+    "\n",
+    "assert len(np.flatnonzero(~np.isclose(zodie, get_inv_wavelet_transform(cA, cH, cV, cD)))) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnt = 0\n",
+    "for i in range(512):\n",
+    "    for j in range(512):\n",
+    "        for k in range(3):\n",
+    "            cnt += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -427,8 +553,8 @@
       "[[1 3]\n",
       " [2 3]] \n",
       "\n",
-      "[[ 2.828  3.536]\n",
-      " [-1.414 -0.707]]\n",
+      "[[ 2.121  4.243]\n",
+      " [-0.707  0.   ]]\n",
       "(array([[2.121, 4.243]]), array([[-0.707,  0.   ]]))\n"
      ]
     }
@@ -444,33 +570,74 @@
     "\n",
     "# multiplying zodie by transpose gives\n",
     "# har wavelets in terms f \n",
-    "print(H @ zodie.T)\n",
+    "print(H @ zodie)\n",
     "\n",
     "print(pywt.dwt(zodie, 'db1', axis=0))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[506.996 173.241]] [[-293.449    0.707]] \n",
-      "\n",
-      "[[481.]] [[236.]]\n",
-      "yooooo\n",
-      "\n",
-      "\n",
-      "[[-207.]] [[-208.]]\n",
-      "(array([[481.]]), (array([[-207.]]), array([[236.]]), array([[-208.]])))\n"
+      "[2.121 4.243] [-0.707  0.   ]\n",
+      "4.499999999999999 -1.4999999999999998\n",
+      "-0.4999999999999999 -0.4999999999999999\n",
+      "(array([[4.5]]), (array([[-0.5]]), array([[-1.5]]), array([[-0.5]])))\n"
      ]
     }
    ],
    "source": [
-    "zodie = np.array([[151, 123], [566, 122]])\n",
+    "# doing it ourselves\n",
+    "\n",
+    "zodie = np.array([[1,3], [2, 3]])\n",
+    "\n",
+    "H = np.array([[1, 1], [1, -1]]) / np.sqrt(2)\n",
+    "# axis zero\n",
+    "# print(H @ zodie)\n",
+    "row_cA, row_cD = H @ zodie\n",
+    "print(row_cA, row_cD)\n",
+    "\n",
+    "col_cA, col_cD = H @ row_cA.T \n",
+    "print(col_cA, col_cD)\n",
+    "\n",
+    "\n",
+    "col_cA, col_cD = H @ row_cD.T \n",
+    "print(col_cA, col_cD)\n",
+    "\n",
+    "# LL, (cDh, cd)\n",
+    "print(pywt.dwt2(zodie, 'db1'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2.121 4.243]] [[-0.707  0.   ]] \n",
+      "\n",
+      "[[4.5]] [[-1.5]]\n",
+      "yooooo\n",
+      "\n",
+      "\n",
+      "[[-0.5]] [[-0.5]]\n",
+      "(array([[4.5]]), (array([[-0.5]]), array([[-1.5]]), array([[-0.5]])))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# zodie = np.array([[151, 123], [566, 122]])\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "row_cA, row_cD = pywt.dwt(zodie, 'db1', axis=0)\n",
     "# downsample, keep even index cols\n",
